@@ -1578,3 +1578,380 @@ tcltest::test cookfsPages-17.1 "Check if cache checking is working properly" -co
     unset -nocomplain file pg result
 } -result {0 0 1 0 1
 0 0 0 0 0}
+
+# gethead/getheadmd5/gettail/gettailmd5 are only implemented in c-pages
+
+tcltest::test cookfsPages-18.1.1 "Check gethead for readonly pages (many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    string equal [$pg gethead] $head
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result 1
+
+tcltest::test cookfsPages-18.1.2 "Check gethead for readonly pages (1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {H} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg gethead
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result H
+
+tcltest::test cookfsPages-18.1.3 "Check gethead for readonly pages (0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg gethead
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {}
+
+tcltest::test cookfsPages-18.2.1 "Check gethead for read-write pages (many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg add "Y"
+    string equal [$pg gethead] $head
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result 1
+
+tcltest::test cookfsPages-18.2.2 "Check gethead for read-write pages (1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {H} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg add "Y"
+    $pg gethead
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result H
+
+tcltest::test cookfsPages-18.2.3 "Check gethead for read-write pages (0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg add "Y"
+    $pg gethead
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {}
+
+tcltest::test cookfsPages-19.1.1 "Check getheadmd5 for readonly pages (many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg getheadmd5
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {382EB98F1CC1885D800B07ECB181334C}
+
+tcltest::test cookfsPages-19.1.2 "Check getheadmd5 for readonly pages (1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {H} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg getheadmd5
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {C1D9F50F86825A1A2302EC2449C17196}
+
+tcltest::test cookfsPages-19.1.3 "Check getheadmd5 for readonly pages (0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg getheadmd5
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {D41D8CD98F00B204E9800998ECF8427E}
+
+tcltest::test cookfsPages-19.2.1 "Check getheadmd5 for read-write pages (many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg add "Y"
+    $pg getheadmd5
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {382EB98F1CC1885D800B07ECB181334C}
+
+tcltest::test cookfsPages-19.2.2 "Check getheadmd5 for read-write pages (1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {H} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg add "Y"
+    $pg getheadmd5
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {C1D9F50F86825A1A2302EC2449C17196}
+
+tcltest::test cookfsPages-19.2.3 "Check getheadmd5 for read-write pages (0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg add "Y"
+    $pg getheadmd5
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result {D41D8CD98F00B204E9800998ECF8427E}
+
+tcltest::test cookfsPages-20.1.1 "Check gettail for readonly pages (head has many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg gettail
+    # expected result: stamp + page + index data + signature
+    # i.e. it has to start with "CFSS003" and end with the words "CFS0003"
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -match glob -result {CFSS003*CFS0003}
+
+tcltest::test cookfsPages-20.1.2 "Check gettail for readonly pages (head has 1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {X} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg gettail
+    # expected result: stamp + page + index data + signature
+    # i.e. it has to start with "CFSS003" and end with the words "CFS0003"
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -match glob -result {CFSS003*CFS0003}
+
+tcltest::test cookfsPages-20.1.3 "Check gettail for readonly pages (head has 0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    $pg gettail
+    # expected result: stamp + page + index data + signature
+    # i.e. it has to start with "CFSS003" and end with the words "CFS0003"
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -match glob -result {CFSS003*CFS0003}
+
+tcltest::test cookfsPages-20.2.1 "Check gettail for readwrite pages (head has many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg gettail
+    # expected result: stamp + page + index data + signature
+    # i.e. it has to start with "CFSS003" and end with the words "CFS0003"
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -match glob -result {CFSS003*CFS0003}
+
+tcltest::test cookfsPages-20.2.2 "Check gettail for readwrite pages (head has 1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {X} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg gettail
+    # expected result: stamp + page + index data + signature
+    # i.e. it has to start with "CFSS003" and end with the words "CFS0003"
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -match glob -result {CFSS003*CFS0003}
+
+tcltest::test cookfsPages-20.2.3 "Check gettail for readwrite pages (head has 0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    $pg gettail
+    # expected result: stamp + page + index data + signature
+    # i.e. it has to start with "CFSS003" and end with the words "CFS0003"
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -match glob -result {CFSS003*CFS0003}
+
+tcltest::test cookfsPages-21.1.1 "Check gettailmd5 for readonly pages (head has many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    string length [$pg gettailmd5]
+    # We are not testing a specific result. Let's just size-check that
+    # the return value is an MD5 hash, and automatically check for memory leaks.
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result 32
+
+tcltest::test cookfsPages-21.1.2 "Check gettailmd5 for readonly pages (head has 1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {X} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    string length [$pg gettailmd5]
+    # We are not testing a specific result. Let's just size-check that
+    # the return value is an MD5 hash, and automatically check for memory leaks.
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -result 32
+
+tcltest::test cookfsPages-21.1.3 "Check gettailmd5 for readonly pages (head has 0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages -readonly $file]
+    string length [$pg gettailmd5]
+    # We are not testing a specific result. Let's just size-check that
+    # the return value is an MD5 hash, and automatically check for memory leaks.
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -result 32
+
+tcltest::test cookfsPages-21.2.1 "Check gettailmd5 for readwrite pages (head has many bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set head [string repeat {TEST01} 4097]
+    set file [tcltest::makeBinFile $head pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    string length [$pg gettailmd5]
+    # We are not testing a specific result. Let's just size-check that
+    # the return value is an MD5 hash, and automatically check for memory leaks.
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg head
+} -result 32
+
+tcltest::test cookfsPages-21.2.2 "Check gettailmd5 for readwrite pages (head has 1 byte)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {X} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    string length [$pg gettailmd5]
+    # We are not testing a specific result. Let's just size-check that
+    # the return value is an MD5 hash, and automatically check for memory leaks.
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -result 32
+
+tcltest::test cookfsPages-21.2.3 "Check gettailmd5 for readwrite pages (head has 0 bytes)" -constraints {enabledCPages enabledTclCmds} -setup {
+    set file [tcltest::makeBinFile {} pages.cfs]
+    set pg [cookfs::pages -compression none $file]
+    $pg add "X"
+    $pg delete
+} -body {
+    set pg [cookfs::pages $file]
+    string length [$pg gettailmd5]
+    # We are not testing a specific result. Let's just size-check that
+    # the return value is an MD5 hash, and automatically check for memory leaks.
+} -cleanup {
+    catch { $pg delete }
+    file delete -force $file
+    unset -nocomplain file pg
+} -result 32
+
